fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body{
     padding: 0px auto;
     font-family: 'Montserrat', sans-serif;
     color: rgb(44, 43, 43);
+    background-color: rgba(255, 255, 255, 0.993);    
     
 }
 
@@ -12,13 +13,13 @@ body{
     border-color: rgb(44, 43, 43);
     border-width: 10px;
     margin: 10px;
-    height: 100%;
+    height: 100vh;
     
 }
 
 .main{
     margin: 10px;
-
+    height: 100px;
     
 }
 
@@ -60,7 +61,7 @@ h1{
 .container{
     margin: 0 auto;
     padding: 10px;
-    height: 200px;
+    /* height: 400px; */
 }
 
 #row-main{
@@ -106,7 +107,7 @@ footer{
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 1rem;
+    
     margin-right: 15px;
     margin-left: 15px;
     
@@ -161,6 +162,10 @@ h2{
    
     
 
+}
+
+#aboutp{
+    text-align: left;
 }
 
 
